Simplify code for loading file content into String
Change-Id: I80288d729be864db793fe1f368ff31df10784c01